--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
     <!-- Example add video  -->
     <video controls autoplay="autoplay" loop>
-      <source src="https://player.vimeo.com/external/322244668.sd.mp4?s=338c48ac2dfcb1d4c0689968b5baf94eee6ca0c1&profile_id=165&oauth2_token_id=57447761" type="video/mp4">
+      <source src="image/1252581517.mp4">
     </video>
 
     <!-- Text at center of ground -->
