--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     <img src="image/IMG_20221225_171806.jpg" alt="">
     <img src="image/IMG_20221224_195352.jpg" alt="">
     <img src="image/IMG_20221218_153222.jpg" alt="">
+    <img src="image/new.jpg" alt="">
 
     <!-- Example image with link -->
     <a target="_blank" href="https://images.pexels.com/photos/139829/pexels-photo-139829.jpeg">
